Bug 1033917 - [Rocketbar][RTL] Vertical Homescreen E.me search input should be right aligned in RTL locales

--- a/apps/system/style/rocketbar/rocketbar.css
+++ b/apps/system/style/rocketbar/rocketbar.css
@@ -11,11 +11,6 @@
   transition: opacity 0.25s linear;
 }
 
-/* RTL fixes being tracked in bug 1008013 */
-*[dir=rtl] #rocketbar {
-  direction: ltr;
-}
-
 #rocketbar.active {
   opacity: 1;
   pointer-events: auto;
@@ -46,8 +41,10 @@
   width: 100%;
   height: 2rem;
   color: #e7e7e7;
-  padding: 0 0 0 0.5rem;
+  padding: 0;
+  padding-left: 0.5rem;
   text-overflow: ellipsis;
+  text-align: left;
 }
 
 #rocketbar-input {
@@ -98,7 +95,9 @@
   font-size: 1.4rem;
   font-style: italic;
   line-height: 1.8rem;
-  padding: 0 .7rem 0 1.4rem;
+  padding: 0;
+  -moz-padding-start: 1.4rem;
+  -moz-padding-end: .7rem;
 }
 
 #rocketbar-cancel::before {
@@ -161,4 +160,17 @@
     height: calc(100% - 7rem);
     width: calc(100% - var(--software-home-button-height));
   }
+}
+
+html[dir="rtl"] #rocketbar,
+html[dir="rtl"] #rocketbar-cancel::before,
+html[dir="rtl"] #rocketbar-results, #rocketbar-backdrop {
+  left: unset;
+  right: 0;
+}
+
+html[dir="rtl"] #rocketbar-input {
+  padding-left: unset;
+  padding-right: 0.5rem;
+  text-align: right;
 }
